## Process this file with automake to produce Makefile.in
# $Id: Makefile.am,v 1.3 2002-04-30 20:47:59 themnemonic Exp $

AUTOMAKE_OPTIONS = no-dependencies foreign 1.4

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO 

## Proceed to subdirs

SUBDIRS = m4 src doc po
