## Process this file with automake to produce Makefile.in
# $Id: Makefile.am,v 1.5 2002-05-01 14:32:33 themnemonic Exp $

AUTOMAKE_OPTIONS = no-dependencies foreign 1.4 dist-bzip2

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO 

## Proceed to subdirs

SUBDIRS = m4 lib src doc po
