## Process this file with automake to produce Makefile.in
# $Id: Makefile.am,v 1.3 2002-08-17 10:22:54 themnemonic Exp $

EXTRA_DIST = codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4 \
	inttypes_h.m4 inttypes.m4 inttypes-pri.m4 isc-posix.m4 lbl-net.m4 \
	lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 \
	stdint_h.m4 uintmax_t.m4 ulonglong.m4
